# Changelog v0.6.1

- Now Valoria requires Lodestone

- ID change of "pick" -> "prospectors_pick"

- Fixed Katana's, Scythe's
- Fixed infinite use of Katana
- Fixed Gloves rendering

- Optimized Gloves code
- Updated mods.toml

# Changelog v0.6

- Optimized Quicksand Fog Rendering
- Optimized CurioItemProperty
- Optimized Infernal Sword
- Optimized Scythe Items
- Optimized Lexicon Page Item
- Optimized Mannequin
- Optimized Weapons abilities

- Added functionality for ALL runes (finally did it lmao)
- Added Jade compat
- Added Compat for Enchantment Descriptions
- Added 2 attributes to Prospectors pick
- Added a new painting The Starry night by Vincent Van Gogh
- Added Entities to vailla tags
- Added cooldown for Phantom
- Added ColorMapping for plants
- Added Flammable to wooden blocks
- Added Ores to forge tags
- Added Shadewood branch
- Added Void Taint
- Added The Valoria Dimension:
    - Added Violet Sprout
    - Added Glow Violet Sprout
    - Added Glowfern
    - Added Voidvine
    - Added Void Serpents
    - Added Eye Stone
    - Added Eye Meat
    - Added Voidtaint Lantern
    - Added Abyssal Lantern
    - Added Void Taint
    - Added Deep Marble
    - Added Shadewood Branch
    - Added Dormant Crystals
    - Added Eye Chunk
    - Added Tainted Roots
    - Added Tainted Berries

    - Added Wicked Amethyst Gen
    - Added Dormant Crystals Gen
    - Added Gen to All plants from this World
    - Added Eldritch tree

    - Reworked Shadewood tree
    - 2 New biomes (Shadewood forest, Void Barren, Ecotone)
- Added Fancy Shadewood Tree
- Added Pearlium generation
- Added Crystal disk generation
- Added Modded Stone Variants to tag Stone Tool Materials
- Added Animation to some blocks
- Added Mod Armor to all Tags (Armors are trimmable now)
- Added Armor Trims Materials
- Added Bows zooming - thanks to MaxBogomol for the code <3
- Added Vanishable to most of the items
- Added Ukrainian lang
- Added Swamp Wanderer (Redone him and added back to game)