@@ -4,7 +4,7 @@ org.gradle.daemon=false
 org.gradle.jvmargs=-Xmx1024m
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.2.1-bin.zip
 
-dev_version=0.6.1b.240713264
+dev_version=0.6.1b.240718719
 minecraft_version=1.20.1
 forge_version=47.2.16
 jei_version=15.2.0.27
