@@ -8,6 +8,7 @@ import net.minecraft.world.effect.*;
 import net.minecraft.world.entity.*;
 import net.minecraft.world.entity.ai.attributes.*;
 import net.minecraft.world.phys.*;
+import net.minecraftforge.api.distmarker.*;
 import team.lodestar.lodestone.systems.particle.data.color.*;
 import team.lodestar.lodestone.systems.particle.render_types.*;
 
@@ -33,11 +34,18 @@ public class BleedingEffect extends MobEffect{
                 pEntity.hurt(dmg, 1);
             }
 
-            for(int a = 0; a < 5; a++){
-                Vec3 pos = new Vec3(pEntity.getX() + (new Random().nextDouble() - 0.5f) / 2, pEntity.getY() + (new Random().nextDouble() + 1f) / 2, pEntity.getZ());
-                ParticleEffects.particles(pEntity.level(), pos, ColorParticleData.create(Pal.darkRed, Color.red).build()).getBuilder().setRandomMotion(0.5f, 0, 0.5f).setRandomOffset(0.7f, 0f, 0.7f).setRenderType(LodestoneWorldParticleRenderType.LUMITRANSPARENT).setGravityStrength(0.75f).spawn(pEntity.level(), pos.x, pos.y, pos.z);
+            if(pEntity.level().isClientSide()){
+                for(int a = 0; a < 5; a++){
+                    spawnParticles(pEntity);
+                }
             }
         }
+    }
+
+    @OnlyIn(Dist.CLIENT)
+    public void spawnParticles(LivingEntity pEntity){
+        Vec3 pos = new Vec3(pEntity.getX() + (new Random().nextDouble() - 0.5f) / 2, pEntity.getY() + (new Random().nextDouble() + 1f) / 2, pEntity.getZ());
+        ParticleEffects.particles(pEntity.level(), pos, ColorParticleData.create(Pal.darkRed, Color.red).build()).getBuilder().setRandomMotion(0.5f, 0, 0.5f).setRandomOffset(0.7f, 0f, 0.7f).setRenderType(LodestoneWorldParticleRenderType.LUMITRANSPARENT).setGravityStrength(0.75f).spawn(pEntity.level(), pos.x, pos.y, pos.z);
     }
 
     @Override
