@@ -1,4 +1,5 @@
 {
+	"credit": "Made with Blockbench",
 	"textures": {
 		"1": "valoria:block/archaeology_table",
 		"particle": "valoria:block/archaeology_table"
@@ -23,7 +24,7 @@
 			"faces": {
 				"north": {"uv": [9.5, 4, 5, 7], "texture": "#1"},
 				"east": {"uv": [0.25, 4, 4.5, 7], "texture": "#1"},
-				"south": {"uv": [5, 4, 9, 7], "texture": "#1"},
+				"south": {"uv": [5, 4, 9.5, 7], "texture": "#1"},
 				"west": {"uv": [0, 4, 4.5, 7], "texture": "#1"},
 				"down": {"uv": [9.5, 4, 14, 7], "texture": "#1"}
 			}
