@@ -1,0 +1,5 @@
+{
+  "textures": [
+    "valoria:cube"
+  ]
+}
